# AirBridge

./: .gitattributes  .gitignore  LICENSE  README.md  logs_1.txt  pyproject.toml  requirements-dev.txt  requirements.txt  start.bat  start.sh
airbridge/: __init__.py  __main__.py  auth.py  config.py  crypto.py  discovery.py  server.py  transfer.py
tests/: test_auth.py  test_crypto.py  test_server.py  test_transfer.py
webapp/: index.html  manifest.json  sw.js
webapp/css/: style.css
webapp/js/: app.js
